src/components/People.css
.meet-team-container {
  text-align: center;
  padding: 5vw;
  height: 70vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.meet,
.the-team {
  display: inline-block;
  color: #051e4f;
  font-family: "ivymode";
  font-weight: 300;
  line-height: 0.8em;
  word-wrap: break-word;
  font-size: 20vw;
  transition: transform 0.5s;
  will-change: transform;
}

.meet {
  text-align: left;
}

.the-team {
  text-align: right;
}

@keyframes slideInFromLeft {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes slideInFromRight {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0);
  }
}

@media (max-width: 975px) {
  .the-team {
    font-size: 150px;
    margin-right: 5vw;
  }
}

.box {
  background-color: #0c2b56;
  color: #fae5e2;
  font-size: 96px;
  white-space: nowrap;
}

.box-text {
  transform: rotate(180deg);
  color: #fbe4df;
  font-size: 128px;
  font-family: "neue-haas-grotesk-display", sans-serif;
  font-weight: 350;
  line-height: 108.8px;
  word-wrap: break-word;
}

.subgroup-container,
.person-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 0px;
  padding: 0;
  margin: 0;
}

.person-container {
  max-width: 50vw;
}

.name {
  font-size: 1.5rem;
  margin-bottom: 5px;
}

.d_type {
  font-size: 3rem;
}

.description {
  font-size: 0.9rem;
  max-width: 25vw;
  color: #051e4f;
  justify-self: start;
  text-align: left;
}

.d_type_box {
  display: flex;
  flex-direction: row;
}

/* add mobile styling to flex column for .d_type_box */
@media (max-width: 768px) {
  .d_type_box {
    flex-direction: column;
  }
}

.people-page-body img {
  border-radius: 5px;
  max-width: 25vw;
}

.people-page-body {
  overflow-x: hidden;
}

/* Presidents Section */
.presidents {
  display: grid;
  grid-template-columns: 165px 1fr 1fr;
  margin-bottom: 150px;
  height: min-content;
}

.presidents-box {
  transform: rotate(90deg);
  transform-origin: bottom left;
  width: fit-content;
  height: fit-content;
  justify-self: inherit;
  margin: 0;
  padding: 0;
  margin-top: -100px;
}

.presidents-box-text {
  padding-top: 20px;
  padding-left: 15vw;
}

.pres1 {
  margin-top: -50vh;
}

.pres2 {
  padding-top: 50vh;
}

.image_box {
  overflow: hidden;
}

/* Set the animations to be smoother for the img inside .image_box */

/* ! Removes Rounding */
.image_box img {
  transition: transform cubic-bezier(0.5, 0.22, 0.22, 1);
}

/* Chiefs Section - Applying similar structure as Presidents */
.chiefs {
  display: grid;
  grid-template-columns: 1fr 1fr 165px;
  margin-bottom: 150px;
}

.chief1 {
  padding-top: 45vh;
}

.chief2 {
  margin-top: -25vh;
}

.chiefs-box {
  transform: rotate(-90deg);
  transform-origin: bottom right;
  width: fit-content;
  height: fit-content;
  justify-self: end;
  margin: 10px;
  margin-right: 0;
  padding: 5px;
  padding-left: 15vw;
  padding-top: 20px;
  margin-top: -100px;
}

.chiefs-box-text {
  transform: rotate(0deg);
  color: #fbe4df;
  font-size: 128px;
  font-family: "neue-haas-grotesk-display", sans-serif;
  font-weight: 350;
  line-height: 108.8px;
  word-wrap: break-word;
}

.chiefs-box-text i {
  color: #fbe4df;
  font-size: 128px;
  font-family: ivymode;
  font-weight: 350;
  line-height: 108.8px;
  word-wrap: break-word;
}

/* Directors Section */
.directors {
  display: grid;
  grid-template-columns: 165px auto;
  margin-bottom: 50px;
}

.directors-box {
  transform: rotate(90deg);
  transform-origin: bottom left;
  width: fit-content;
  height: fit-content;
  justify-self: inherit;
  margin: 0;
  padding: 0;
  padding-right: 15vw;
  padding-bottom: 20px;
  margin-top: -100px;
}

.emily {
  display: flex;
  flex-direction: row;
  margin-bottom: 100px;
}

.d_type_image {
  display: flex;
  flex-direction: column;
}

.emily .nameAndDescription {
  align-self: end;
  padding-left: 10px;
}

.subgroup_containerD_all {
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.d_type_box {
  display: grid;
  grid-template-columns: 40vw 40vw;
  height: fit-content;
}

/* 2x1 grid */
.subgroup-containerD {
  width: 100vw;
  display: grid;
  grid-template-columns: 40vw 40vw;
  margin-bottom: 50px;
}
/* ! remember to add this back again, not working for some reason */
.to-fly-from-left {
  opacity: 0;
  filter: blur(5px);
  transform: translateX(-100%);
  transition: all 1s;
}

.to-fly-from-right {
  opacity: 0;
  filter: blur(5px);
  transform: translateX(+100%);
  transition: all 1s;
}

.to-fade-in {
  opacity: 0;
  filter: blur(5px);
  transition: all 1s;
}

.show {
  filter: blur(0);
  transform: translateX(0);
  opacity: 1;
}

/* on mobile, configure d_type_box and subgroup-containerD to use 100% of the width and instead of rows, do columns */
@media (max-width: 768px) {
  .d_type_box {
    grid-template-columns: 100vw;
    grid-template-rows: auto auto;
  }

  .subgroup-containerD {
    grid-template-columns: 100vw;
    grid-template-rows: auto auto;
    margin-bottom: 50px;
  }

  .subgroup-containerD div {
    padding-bottom: 20px;
  }

  /* make director in the center (horizontally) of their column */
  .director {
    justify-self: start;
    /* make them occupy more space on mobile */
  }

  .director img {
    max-width: 50vw;
    height: auto;
  }

  .person-container {
    max-width: 80vw;
  }

  .description {
    max-width: 50vh;
  }

  .people-page-body .directors img {
    border-radius: 15px;
  }

  .emily {
    display: flex;
    flex-direction: column;
    margin-bottom: 100px;

    align-self: start;
    padding-left: 0px;
  }
}

